--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Extralight.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Extralight.woff2') format('woff2');
         font-weight: 200;
         font-style: normal;
         font-display: swap;
@@ -13,7 +13,7 @@
 
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Light.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Light.woff2') format('woff2');
         font-weight: 300;
         font-style: normal;
         font-display: swap;
@@ -21,7 +21,7 @@
 
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Regular.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Regular.woff2') format('woff2');
         font-weight: 400;
         font-style: normal;
         font-display: swap;
@@ -29,7 +29,7 @@
 
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Medium.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Medium.woff2') format('woff2');
         font-weight: 500;
         font-style: normal;
         font-display: swap;
@@ -37,7 +37,7 @@
 
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Semibold.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Semibold.woff2') format('woff2');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
@@ -45,7 +45,7 @@
 
     @font-face {
         font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Bold.woff2');
+        src: url('/fonts/clash-display/ClashDisplay-Bold.woff2') format('woff2');
         font-weight: 700;
         font-style: normal;
         font-display: swap;
