:sparkles:feat: atualiza estados de envio do formulário.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,16 @@ li .active {
     padding-bottom: 5px;
     border-bottom: 3px solid #FFFFFF;
 }
+
+.spinner {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
