--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,99 +1,30 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-@layer base {
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Extralight.woff2') format('woff2');
-        font-weight: 200;
-        font-style: normal;
-        font-display: swap;
-    }
+:root {
+  --background: #fafafa;
+  --foreground: #3a5dff;
+}
 
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Light.woff2') format('woff2');
-        font-weight: 300;
-        font-style: normal;
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Regular.woff2') format('woff2');
-        font-weight: 400;
-        font-style: normal;
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Medium.woff2') format('woff2');
-        font-weight: 500;
-        font-style: normal;
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Semibold.woff2') format('woff2');
-        font-weight: 600;
-        font-style: normal;
-        font-display: swap;
-    }
-
-    @font-face {
-        font-family: 'Clash Display';
-        src: url('/fonts/clash-display/ClashDisplay-Bold.woff2') format('woff2');
-        font-weight: 700;
-        font-style: normal;
-        font-display: swap;
-    }
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
-    font-family: 'Clash Display', sans-serif;
-    background-color: #021526;
-    color: #FFFFFF;
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Poppins, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#projects-swiper {
-    width: calc(100% + 100px);
+a {
+  text-decoration: none;
+}
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
-header {
-    background: rgb(15, 34, 97);
-    background: linear-gradient(180deg, rgba(15, 34, 97, 1) 0%, rgba(2, 21, 38, 1) 100%);
-}
-
-li {
-    border-bottom: 3px solid transparent;
-    padding-bottom: 2px;
-}
-
-.list-no-mobile li:hover {
-    border-bottom-color: #FFFFFF;
-}
-
-li .active {
-    padding-bottom: 5px;
-    border-bottom: 3px solid #FFFFFF;
-}
-
-.spinner {
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
